common/src/test/resources/judge-errors/cpp/compile-undeclared.txt
main.cpp:9:5: error: 'foo' was not declared in this scope
    9 |     foo();
      |     ^~~
